# site-tree-generator

./: README.md  pyproject.toml
src/sitetree/: cli.py  core.py
