[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "site-tree-generator"
version = "0.1.5"
description = "Generate site tree PDF from breadcrumb Excel"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "arabic-reshaper",
  "python-bidi",
  "pandas",
  "openpyxl",
  "anytree",
  "matplotlib"
]

[project.scripts]
site-tree = "sitetree.cli:main"
